--- a/src/css/parts/designer.less
+++ b/src/css/parts/designer.less
@@ -106,10 +106,6 @@
     text-align: center;
 }
 
-input[type="radio"], input[type="file"] {
-    display: none;
-}
-
 .designer__carousel-control{
     width: 35px;
     height: 40px;
@@ -222,7 +218,6 @@ input[type="radio"], input[type="file"] {
     position: absolute;
     top: 18px;
     left: 3px;
-
 }
 
 .radio-wrapper.active .radio-label.radio-label_black:after {
@@ -328,7 +323,6 @@ input[type="radio"], input[type="file"] {
     background: #f0e8c1;
 }
 
-
 .input-data-wrapper {
     position: relative;
 }
@@ -349,6 +343,7 @@ input[type="radio"], input[type="file"] {
     width: 200px;
     height: 190px;
     font-size: 18px;
+    position: fixed;
 }
 
 .ui-datepicker-calendar {
