--- a/src/css/parts/footer.less
+++ b/src/css/parts/footer.less
@@ -4,6 +4,17 @@ footer {
     background: url(../../images/background/footer.png) no-repeat center bottom #f6fbfe;
     background-size: contain;
     padding: 10px 0 370px;
+	position: relative;
+}
+
+footer:before {
+    content: "";
+    background: url(../../images/dog.png) no-repeat center;
+    width: 110px;
+    height: 75px;
+    position: absolute;
+    right: 193px;
+    top: -73px;
 }
 
 .logo.logo_mobile {
