--- a/src/css/parts/ui-slider-range.less
+++ b/src/css/parts/ui-slider-range.less
@@ -15,6 +15,14 @@
     height: 2px;
 }
 
+.ui-slider-weight {
+    font-size: 21px;
+    color: rgb(55, 54, 54);
+    font-weight: 700;
+    position: absolute;
+    bottom: -22px;
+}
+
 .ui-slider::last-child {
     left: 60%;
 }
@@ -44,10 +52,47 @@
 	touch-action: none;
 }
 
-.ui-slider-weight {
+.ui-slider-price {
+ 	background-color: rgb(240, 232, 193);
+	height: 6px;
+	margin: 30px 0 15px;
+}
+
+.ui-slider-price .ui-slider-range {
+	background-color: rgb(238, 190, 108);
+	height: 6px;
+}
+
+.ui-slider-handle_price {
+	border-radius: 50%;
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.35);
+	width: 16px;
+	height: 16px;
+	top: -6px;
+}
+
+.ui-slider-price_amount {
     font-size: 21px;
-    color: rgb(55, 54, 54);
-    font-weight: 700;
+    color: #4d4948;
+    letter-spacing: .1px;
     position: absolute;
-    bottom: -22px;
+    top: -20px;
+    left: -6px;
+}
+
+.ui-slider-price__label {
+	display: block;
+	font-size: 21px;
+	color: rgb(77, 73, 72);
+	padding-left: 5px;
+}
+
+.ui-slider-price__input {
+	border: 1px solid rgb(238, 190, 108);
+	border-radius: 5px;
+	background-color: rgba(255, 255, 255, 0.8);
+	width: 78px;
+	height: 28px;
+	padding: 0 10px;
 }
