--- a/src/css/main.less
+++ b/src/css/main.less
@@ -583,6 +583,11 @@
 	margin-top: 10px;
 }
 
+.card-info__input-number .input_plugin_number {
+    width: 65px;
+    height: 32px;
+}
+
 @media screen and (min-width: 1024px) {
 	.select__field_card {
 		width: 140px;
@@ -610,7 +615,6 @@
 	.select_card ul {
 		top: 46px;
 	}
-}
 
 	.card-info__input-number .main_number_plugin:before {
 		width: 30px;
@@ -619,6 +623,8 @@
 
 	.card-info__input-number .input_plugin_number {
 		font-size: 33px;
+		width: 95px;
+    	height: 45px;
 	}
 
 	.card-info__input-number .minus_plugin_number {
@@ -629,6 +635,7 @@
 		right: 10px;
 		top: 10%;
 	}
+}
 
 .card__price {
 	font-size: 62px;
