--- a/src/css/parts/designer.less
+++ b/src/css/parts/designer.less
@@ -436,7 +436,17 @@
 }
 
 @media screen and (max-width: 639px) {
-    
+ 
+}
+
+@media screen and (max-width: 400px) {
+    .designer__carousel-control.next {
+		right: -25px;
+	}
+	
+	.designer__carousel-control.prev {
+		left: -25px;
+	}
 }
 
 
