--- a/src/css/parts/base-blocks.less
+++ b/src/css/parts/base-blocks.less
@@ -9,16 +9,16 @@
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'FinchFrame3';
-    src: url('../fonts/FinchFrame3-Bold.eot');
-    src: url('../fonts/FinchFrame3-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/FinchFrame3-Bold.woff2') format('woff2'),
-        url('../fonts/FinchFrame3-Bold.woff') format('woff'),
-        url('../fonts/FinchFrame3-Bold.ttf') format('truetype');
-    font-weight: 700;
-    font-style: normal;
-}
+//@font-face {
+//    font-family: 'FinchFrame3';
+//    src: url('../fonts/FinchFrame3-Bold.eot');
+//    src: url('../fonts/FinchFrame3-Bold.eot?#iefix') format('embedded-opentype'),
+//        url('../fonts/FinchFrame3-Bold.woff2') format('woff2'),
+//        url('../fonts/FinchFrame3-Bold.woff') format('woff'),
+//        url('../fonts/FinchFrame3-Bold.ttf') format('truetype');
+//    font-weight: 700;
+//    font-style: normal;
+//}
 
 @font-face {
     font-family: 'RuslanDisplay';
