--- a/src/css/main.less
+++ b/src/css/main.less
@@ -683,7 +683,7 @@
 }
 
 .card-buttons {
-	margin: 30px 0 10px;
+	margin: 10px 0;
 	flex-wrap: nowrap;
 }
 
@@ -770,6 +770,11 @@
 }
 
 @media screen and (max-width: 767px) {
+	
+	.main-screen_inner-page {
+		margin: 0;
+	}
+	
 	.catalog-filters {
 		display: none;
 	}
@@ -784,14 +789,6 @@
 	
 	.card-info__photo {
 		margin-bottom: 15px;
-	}
-	
-	.card__filters_desktop {
-		display: none;
-	}
-	
-	.card__filters_mobile {
-		display: flex;
 	}
 	
 	.card-buttons {
