--- a/src/css/parts/ui-slider-range.less
+++ b/src/css/parts/ui-slider-range.less
@@ -29,7 +29,7 @@
 
 .ui-slider-range {
 	position: absolute;
-    left: 14%; 
+    left: 0; 
     height: 2px;
 	z-index: 1;
 	display: block;
@@ -97,3 +97,31 @@
 	height: 28px;
 	padding: 0 10px;
 }
+
+.ui-slider-bonus {
+	border: 1px solid rgb(63, 67, 64);
+	border-radius: 4px;
+	background-color: rgb(246, 251, 254);
+	height: 10px;
+}
+
+.ui-slider-bonus  .ui-slider-range {
+	border: 1px solid rgb(63, 67, 64);
+	border-radius: 4px;
+	background-color: rgb(238, 190, 108);
+	height: 10px;
+}
+
+.ui-slider-bonus .ui-slider-handle {
+	left: 10%;
+}
+
+.ui-slider-handle_bonus {
+	border-radius: 50%;
+	background-color: rgb(255, 255, 255);
+	box-shadow: 0px 0px 4px 0px rgba(1, 3, 0, 0.35);
+	width: 16px;
+	height: 16px;
+	margin-left: -10px;
+}
+
