--- a/src/css/parts/base-blocks.less
+++ b/src/css/parts/base-blocks.less
@@ -122,6 +122,22 @@ input[type="radio"], input[type="file"], input[type="checkbox"] {
     text-transform: uppercase;
 }
 
+.fancybox-container ::-webkit-scrollbar-track { 
+	background-color: rgb(240, 232, 193);
+	width: 4px;
+} 
+
+.fancybox-container ::-webkit-scrollbar-thumb { 
+	background-color: rgb(238, 190, 108);
+	box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.41);
+	width: 10px;
+} 
+
+.fancybox-container ::-webkit-scrollbar{ 
+	width: 10px;
+}
+
+
 
 
 
