--- a/src/css/parts/designer.less
+++ b/src/css/parts/designer.less
@@ -339,6 +339,7 @@
 
 .ui-datepicker {
     background: #ffffff;
+	box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.4);
     padding: 10px 10px 10px 15px;
     width: 200px;
     height: 190px;
