--- a/src/css/main.less
+++ b/src/css/main.less
@@ -857,7 +857,7 @@
 }
 
 .bonus-info__paragraph {
-	font-size: 25px;
+	font: 400 25px "FinchFrame3";
 	color: rgb(55, 54, 54);
 	margin: 10px 0;
 }
@@ -866,31 +866,29 @@
 	text-transform: none;
 }
 
-.login-window {
+.modal-window {
 	display: none;
 	border-radius: 10px;
-	background: url(../images/background/authorization.png) repeat center;
 	padding: 30px 15px;
 	width: 600px;
 }
 
-.login-window .flex {
-	display: flex;
+.modal-window_login {
+	background: url(../images/background/authorization.png) repeat center;
+}
+
+.modal-inner {
 	flex-direction: column;
 	align-items: center;
 }
 
-.login-window__caption {
+.modal-inner__caption {
 	font: 700 40px "FinchFrame3";
 	color: rgb(77, 73, 72);
 	text-transform: uppercase;
 }
 
-.login-window__button {
-	text-transform: none;
-}
-
-.login-window__terms {
+.modal-inner__terms {
 	font: 700 20px "FinchFrame3";
 	color: rgba(0, 0, 0, 0.8);
 	font-weight: bold;
@@ -898,16 +896,17 @@
 	max-width: 300px;
 }
 
-.login-window .input {
+.modal-inner .input {
 	margin: 10px 0;
 	border: 2px solid rgb(55, 54, 54);
 	border-radius: 5px;
 	max-width: 300px;
 }
 
-.login-window__button {
+.modal-inner__button {
 	margin: 20px 0 10px;
-	font-size: 20px;
+	font: 700 20px "FinchFrame3";
+	color: rgb(105, 105, 105);
 	text-transform: uppercase;
 	width: 250px;
 	border: 1px solid rgb(63, 67, 64);
@@ -979,6 +978,30 @@
 	color: rgb(63, 67, 64);
 }
 
+.radio-label.radio-label_big-black:before {
+    border: 2px solid rgb(63, 67, 64);
+    width: 16px;
+    height: 16px;
+	top: 13px;
+}
+
+.radio-label.radio-label_big-black:after {
+	display: none;
+	content: "";
+    border: 2px solid rgb(63, 67, 64);
+	border-radius: 50%;
+    background-color: rgb(63, 67, 64);
+    width: 8px;
+    height: 8px;
+	position: absolute;
+    top: 17px;
+    left: 4px;
+}
+
+.radio-wrapper.active .radio-label.radio-label_big-black:after {
+    display: block;
+}
+
 .checkout-delivery__address {
 	display: none;
 	max-width: 350px;
@@ -987,7 +1010,6 @@
 	box-shadow: 0px 10px 14.25px 0.75px rgba(1, 3, 0, 0.25);
 	padding: 5px 15px;
 	margin-left: 30px;
-	
 }
 
 .checkout-delivery__address.active {
@@ -1010,22 +1032,22 @@
 	padding: 0 20px;
 }
 
-.checkout-page .input-wrapper {
+.input-wrapper.input-wrapper_changed {
     max-width: 350px;
     margin: 10px auto;
 }
 
-.checkout-page .input-label {
+.input-wrapper_changed .input-label {
     padding-left: 15px;
 }
 
-.checkout-page .input {
+.input-wrapper_changed .input {
 	border: 1px solid rgb(77, 73, 72);
 	border-radius: 5px;
 	box-shadow: none;
 }
 
-.checkout-page .input-data-label {
+.input-wrapper_changed .input-data-label {
     right: 7px;
 	top: 29px;
 }
@@ -1077,9 +1099,13 @@
     top: 9px;
 }
 
-.address-inputs {
-	max-width: 370px;
+.address-inputs-wr {
+	max-width: 350px;
 	margin: 0 auto;
+}
+
+.address-inputs {
+	margin: 0 -10px;
 }
 
 .address-inputs .input-wrapper {
@@ -1145,8 +1171,15 @@
 }
 
 .checkout-total__button {
+	border: 2px solid rgb(63, 67, 64);
+	border-radius: 2px;
+	background-color: rgb(63, 67, 64);
 	width: 40%;
-	padding: 0 20px;
+	max-width: 300px;
+	padding: 5px 20px;
+	font: 700 29px "FinchFrame3";
+	color: rgba(246, 251, 254, 0.902);
+	box-shadow: none;
 }
 
 .checkout-page footer:before {
@@ -1317,10 +1350,9 @@
 		width: 100%;
 	}
 	
-	.login-window {
+	.modal-window {
 		width: auto;
 	}
-	
 }
 
 @media screen and (max-width: 639px) {
