--- a/src/css/parts/base-blocks.less
+++ b/src/css/parts/base-blocks.less
@@ -137,7 +137,16 @@ input[type="radio"], input[type="file"], input[type="checkbox"] {
 	width: 10px;
 }
 
+.fancybox-close-small:after {
+	border: 2px solid #888;
+	line-height: 27px;
+}
 
+.fancybox-close-small:hover:after {
+	border: 2px solid #d4946e;
+	color: #d4946e;
+	background: none;
+}
 
 
 
