--- a/src/css/parts/footer.less
+++ b/src/css/parts/footer.less
@@ -7,7 +7,7 @@ footer {
 	position: relative;
 }
 
-footer:before {
+.home-page footer:before {
     content: "";
     background: url(../../images/dog.png) no-repeat center;
     width: 110px;
