--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1186,6 +1186,192 @@
 	display: none;
 }
 
+/*account*/
+
+.account-nav {
+	justify-content: flex-end;
+	margin: 40px 0 15px 270px;
+}
+
+.account-nav .button {
+    margin-left: 10px;
+    text-transform: none;
+    font-size: 25px;
+    padding: 5px 10px;
+    width: 30%;
+    max-width: 250px;
+}
+
+.account-photo {
+	width: 300px;
+	margin: 100px 20px 0 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.account-photo__img {
+    background: url(../images/icons/account-photo.png) no-repeat 40px 37px #3f4340;
+    width: 300px;
+    height: 296px;
+    margin-bottom: 20px;
+}
+
+.account-photo .file-wrapper {
+	max-width: 250px;
+	margin-bottom: 15px;
+}
+
+.account-photo .file-wrapper:hover {
+    background: #3f4340;
+    color: #fff;
+	box-shadow: none;
+}
+
+.account-info {
+	flex: 1;
+}
+
+.data-screen {
+	background: url(../images/background/account-background.png) no-repeat left top rgba(246, 251, 254, 0.8);
+	border-radius: 5px;
+	box-shadow: 0px 10px 14.25px 0.75px rgba(1, 3, 0, 0.25);
+	padding: 20px 100px;
+	position: relative;
+}
+
+.data-screen:after {
+	content: "";
+	background: url(../images/dog.png) no-repeat center;
+	width: 100px;
+	height: 80px;
+	position: absolute;
+	bottom: -5px;
+	right: 35px;
+}
+
+.data-screen__inputs {
+	margin: 0 -10px;
+}
+
+ .account-page .input-wrapper, .account-page .select {
+	box-sizing: border-box;
+	width: 33.3333%;
+	padding: 0 10px;
+}
+
+.data-screen .input-wrapper_changed .input-data-label {
+    right: 14px;
+    top: 32px;
+    width: 25px;
+    height: 25px;
+}
+
+.data-screen .select .select__field_checkout:before {
+    height: 41px;
+    right: 12px;
+    width: 30px;
+    border-radius: 2px;
+}
+
+.data-screen .select .select__field_checkout:after {
+    height: 23px;
+    right: 41px;
+}
+
+.data-screen__bottom-lines {
+	align-items: center;
+}
+
+.account-page .address-inputs-wr {
+    margin: 0 65px 0 0;
+}
+
+.account-page .address-inputs .input-wrapper {
+    width: 50%;
+}
+
+.data-screen__bottom-lines .button, .order-table .button {
+	width: 33.3333%;
+	font-size: 33px;
+	text-transform: none;
+	max-width: 300px;
+	padding: 7px 20px;
+}
+
+.account-page .button:hover {
+	box-shadow: none;
+}
+
+/*account-history*/
+
+.account-history-page .data-screen {
+	padding: 20px 30px;
+} 
+
+.order-table {
+	border: 1px solid rgb(0, 0, 0);
+	border-radius: 5px;
+	background-color: rgb(246, 251, 254);
+	margin-bottom: 30px;
+	position: relative;
+	z-index: 1;
+}
+
+.order-table__caption {
+	border: 1px solid rgb(0, 0, 0);
+	background-color: rgb(238, 190, 108);
+	padding: 5px 100px;
+	font: 700 33px "FinchFrame3";
+	color: rgb(63, 67, 64);
+}
+
+.order-table_details {
+	padding: 10px 50px;
+	align-items: center;
+}
+
+.order-table__line {
+	font: 400 33.333px "FinchFrame3";
+	color: rgb(63, 67, 64);
+	width: 450px;
+	flex-wrap: nowrap;
+}
+
+.order-table__argument, .order-table_value {
+	width: 50%;
+}
+
+/*pagination*/
+
+.pagination {
+	margin-top: 30px;
+	justify-content: center;
+}
+
+.page-numbers {
+    background-color: #f0e8c1;
+    width: 40px;
+    height: 40px;
+    font: 700 22px "FinchFrame3";
+    color: #58585a;
+    margin: 0 5px;
+    text-align: center;
+    line-height: 40px;
+}
+
+.page-numbers_first, .page-numbers_last, .page-numbers_prev, .page-numbers_next {
+	background: none;
+	width: 20px;
+}
+
+.page-numbers:hover {
+	background-color: rgb(238, 190, 108);
+}
+
+
+
+
 
 /*media*/
 
@@ -1210,6 +1396,15 @@
 	
 	.cart-page .sheet-torn {
 		padding: 0 35px;
+	}
+	
+	.data-screen {
+		padding: 20px 30px;
+	}
+	
+	.account-page .address-inputs-wr {
+		max-width: 300px;
+		margin: 0 30px 0 0;
 	}
 }
 
@@ -1267,6 +1462,41 @@
 	
 	.checkout-total__term, .checkout-total__button{
 		width: 100%;
+	}
+	
+	.account-photo {
+		width: 250px;
+	}
+
+	.account-photo__img {
+		width: 250px;
+		background: url(../images/icons/account-photo.png) no-repeat 15px 39px #3f4340;
+	}
+	
+	.account-page .input-wrapper, .account-page .select {
+		width: 50%;
+	}
+	
+	.data-screen__bottom-lines {
+		flex-direction: column;
+	}
+	
+	.account-page .address-inputs-wr {
+		margin: 0 0 20px 0;
+	}
+	
+	.data-screen__bottom-lines .button {
+		width: 100%;
+		max-width: 250px;
+	}
+	
+	.order-table_details {
+		padding: 10px 15px;
+		flex-wrap: nowrap;
+	}
+	
+	.order-table__line, .order-table .button {
+		font-size: 26px;
 	}
 }
 
@@ -1353,6 +1583,46 @@
 	.modal-window {
 		width: auto;
 	}
+	
+	.account-nav {
+		margin: 40px 0 20px;
+	}
+	
+	.photo-info-screen {
+		flex-direction: column;
+		background-color: rgba(246,251,254,.8);
+		box-shadow: 0 10px 14.25px 0.75px rgba(1,3,0,.25);
+	}
+	
+	.account-photo {
+		width: 100%;
+	}
+	
+	.data-screen {
+		box-shadow: none;
+	}
+	
+	.order-table_details {
+		flex-direction: column;
+	}
+	
+	.order-table__caption {
+		padding: 5px 25px;
+		font-size: 28px ;
+	}
+	
+	.order-table__lines {
+		width: 100%;
+		margin-bottom: 20px;
+	}
+	
+	.order-table__line {
+		width: 100%;
+	}
+	
+	.order-table .button {
+		width: 100%;
+	}
 }
 
 @media screen and (max-width: 639px) {
@@ -1375,6 +1645,33 @@
 	.select__field_price {
 		width: 200px;
 	}	
+	
+	.account-nav {
+		justify-content: space-around;
+	}
+	
+	.account-nav .button {
+		width: auto;
+		margin: 0;
+		font-size: 20px;
+	}
+	
+	.account-page .input-wrapper, .account-page .select {
+		width: 100%;
+	}
+	
+	.account-page .select {
+		margin: 20px 0 5px;
+	}
+	
+	.account-history-page .data-screen {
+		padding: 20px 10px;
+	}
+	
+	.order-table__caption {
+		padding: 5px 10px;
+		font-size: 24px;
+	}
 }
 
 @media screen and (max-width: 500px) {
@@ -1403,5 +1700,23 @@
 	.cart-line__fixed {
 		width: auto;
 		padding: 0 10px;
+	}
+	
+	.order-table__caption {
+		flex-direction: column;
+	}
+	
+	.order-table__line {
+		font-size: 22px;
+	}
+	
+	.page-numbers {
+		width: 30px;
+		height: 30px;
+		line-height: 30px;
+	}
+	
+	.page-numbers_first, .page-numbers_last, .page-numbers_next, .page-numbers_prev {
+		width: 10px;
 	}
 }
