--- a/src/css/main.less
+++ b/src/css/main.less
@@ -697,8 +697,8 @@
 	text-transform: none;
 }
 
-.card-page footer:before {
-	display: none;
+.modal-window_one-click {
+	background: url(../images/background/window-one-click.png) repeat center;
 }
 
 /*cart*/
@@ -1305,9 +1305,14 @@
 
 /*account-history*/
 
-.account-history-page .data-screen {
+.data-screen_2girls {
+	background: url(../images/background/2girls-background.png) no-repeat top;
 	padding: 20px 30px;
 } 
+
+.data-screen.data-screen_2girls:after {
+	display: none;
+}
 
 .order-table {
 	border: 1px solid rgb(0, 0, 0);
@@ -1475,6 +1480,140 @@
 	text-transform: none;
 }
 
+/*contacts*/
+
+.contacts {
+	margin: 0 -70px;
+}
+
+.contacts__column {
+	box-sizing: border-box;
+	width: 50%;
+	padding: 50px 70px;
+}
+
+.contacts__column:first-child {
+	border-right: 2px solid rgba(63, 67, 64, 0.5);
+}
+
+.contacts__caption {
+	font: 700 41px "FinchFrame3";
+	color: rgb(63, 67, 64);
+	text-transform: uppercase;
+}
+
+.contacts__contact {
+	display: block;
+	font: 400 29px "FinchFrame3";
+	color: rgb(63, 67, 64);
+	position: relative;
+	margin: 7px 0;
+	z-index: 1;
+}
+
+.contacts__photo {
+	border-radius: 5px;
+	box-shadow: 0px 10px 14.25px 0.75px rgba(1, 3, 0, 0.25);
+	width: 100%;
+	height: 280px;
+	margin-top: 20px;
+	position: relative;
+}
+
+.contacts__photo_1 {
+	background: url(../images/contacts1.png) no-repeat center;
+	background-size: cover;
+}
+
+.contacts__photo_1:before {
+	content: "";
+	background: url(../images/boy-contacts.png) no-repeat center rgba(246, 251, 254, 0.8);
+	width: 120px;
+	height: 160px;
+	position: absolute;
+	top: -165px;
+	right: -20px;
+}
+
+.contacts__photo_2 {
+	background: url(../images/contacts2.png) no-repeat center;
+	background-size: cover;
+}
+
+.contacts__photo_2:before {
+	content: "";
+	background: url(../images/girl.png) no-repeat center;
+	width: 120px;
+	height: 160px;
+	position: absolute;
+	top: -165px;
+	right: -20px;
+}
+
+.company-card {
+	background: url(../images/background/company-card.png) no-repeat top right rgba(246, 251, 254, 0.8);
+	box-shadow: 0px 10px 14.25px 0.75px rgba(1, 3, 0, 0.25);
+	font: 400 29px "FinchFrame3";
+	padding: 30px 60px;
+}
+
+.company-card iframe {
+	width: 100%;
+	height: 520px;
+	border: none;
+	box-shadow: 0px 10px 14.25px 0.75px rgba(1, 3, 0, 0.25);
+	margin-top: 25px;
+}
+
+/*bonus-page*/
+
+.bonus-system {
+	background: url(../images/background/company-card.png) no-repeat top right rgba(246, 251, 254, 0.8);
+	box-shadow: 0px 10px 14.25px 0.75px rgba(1, 3, 0, 0.25);
+	padding: 30px 60px;
+	margin-top: 50px;
+}
+
+.bonus-system__card-img {
+	background: url(../images/bonus-card.png) no-repeat center;
+	background-size: cover;
+	width: 340px;
+	height: 280px;
+	margin: 20px auto;
+}
+
+.bonus-system__steps {
+	justify-content: space-around;
+	margin-bottom: 30px;
+}
+
+.bonus-system__step {
+	flex-wrap: nowrap;
+	width: 33.3333%;
+	font: 700 41px "FinchFrame3";
+	color: rgb(63, 67, 64);
+	align-items: center;
+}
+
+.bonus-system__steps .button {
+	font-size: 41px;
+	text-transform: none;
+	padding: 7px 10px;
+	width: 70%;
+	margin: 0 10px;
+}
+
+.window_bonus-login {
+	background: url(../images/background/window-bonus-login.png);
+}
+
+.bonus-system__description {
+	font: 400 29px "FinchFrame3";
+	color: rgb(63, 67, 64);
+}
+
+
+
 
 
 /*media*/
@@ -1500,6 +1639,10 @@
 	
 	.cart-page .sheet-torn {
 		padding: 0 35px;
+	}
+	
+	.contacts-page .sheet-torn {
+		padding: 0 50px;
 	}
 	
 	.data-screen {
@@ -1613,6 +1756,28 @@
 	
 	.order__content_container {
 		width: 200%;
+	}
+	
+	.contacts {
+		margin: 0 -20px;
+	}
+	
+	.contacts__column {
+		padding: 0 20px;
+	}
+	
+	.bonus-system__steps {
+		flex-direction: column;
+		align-items: center;
+	}
+	.bonus-system__step {
+		margin: 10px 0;
+		width: 100%;
+		justify-content: center;
+	}
+	
+	.bonus-system__steps .button {
+		width: 250px;
 	}
 }
 
@@ -1755,6 +1920,19 @@
 	.order__content_container {
 		width: 400%;
 	}
+	
+	.contacts {
+		flex-direction: column;
+	}
+	
+	.contacts__column {
+		width: 100%;
+	}
+	
+	.contacts__column:first-child {
+		border: none;
+		margin-bottom: 30px;
+	}
 }
 
 @media screen and (max-width: 639px) {
@@ -1858,5 +2036,17 @@
 	
 	.order-page .order__one_doc {
 		padding: 0 0 50px;
+	}
+	
+	.contacts-page .sheet-torn, .company-card{
+		padding: 30px 15px;
+	}
+	
+	.bonus-system {
+		padding:20px 15px;
+	}
+	
+	.bonus-system__steps .button {
+		width: 220px;
 	}
 }
